--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria de Fotos - Turma 2024</title>
+    <title>Galeria de Fotos</title>
     <!-- Removendo CSS inline e adicionando referência ao arquivo externo -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Cabeçalho da página -->
     <div class="header">
-        <h1>📸 Galeria da Turma</h1>
-        <p>Clique nas fotos para redimensionar</p>
+        <h1>📸 Galeria 3ºDS</h1>
+        <p>Clique nas fotos!</p>
     </div>
 
     <!-- Container principal da galeria -->
