--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Cabeçalho da página -->
     <div class="header">
-        <h1>📸 Galeria 3ºDS</h1>
+        <h1>📸 GALERIA 3ºDS</h1>
         <p>Clique nas fotos!</p>
     </div>
 
