--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!DOCTYPE html> <!-- Declaração do tipo de documento HTML5 -->
+<html lang="pt-BR"> <!-- Define o idioma da página como Português do Brasil -->
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria de Fotos</title>
+    <meta charset="UTF-8"> <!-- Define o conjunto de caracteres para UTF-8, suportando caracteres especiais -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Garante que o layout da página seja responsivo em dispositivos móveis -->
+    <title>Galeria de Fotos</title> <!-- Define o título da página exibido na aba do navegador -->
+    
     <!-- Removendo CSS inline e adicionando referência ao arquivo externo -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Referência ao arquivo CSS externo que contém os estilos da página -->
 </head>
 <body>
     <!-- Cabeçalho da página -->
     <div class="header">
-        <h1>📸 GALERIA 3ºDS</h1>
-        <p>Clique nas fotos!</p>
+        <h1>📸 GALERIA 3ºDS</h1> <!-- Título da página -->
+        <p>Clique nas fotos!</p> <!-- Subtítulo com uma instrução para o usuário -->
     </div>
 
     <!-- Container principal da galeria -->
     <div class="gallery-container">
         <!-- Grid onde as fotos serão inseridas dinamicamente -->
-        <div class="gallery-grid" id="galleryGrid">
+        <div class="gallery-grid" id="galleryGrid"> <!-- O conteúdo da galeria (fotos) será inserido aqui através do JavaScript -->
             <!-- Os cards dos alunos serão inseridos aqui via JavaScript -->
         </div>
     </div>
 
     <!-- Removendo JavaScript inline e adicionando referência ao arquivo externo -->
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Referência ao arquivo JavaScript externo que contém a lógica da página -->
 </body>
 </html>
-
